# SteadyFit

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  TRACING.md  deliverables.md  pyproject.toml  render.yaml
app/: chat_pipeline.py  config.py  main.py  security.py  tracing.py  usage.py
app/graph/: approval_copy.py  build.py  citations.py  critique.py  intake.py  (+7 more)
data/: mock_calendar.json
evals/: case88_after_fix.json  case88_before_after.md  compare.py  compare_evals.py  comparison_baseline_fixed_vs_hybrid_retrieval.md  golden_dataset.jsonl  helpers.py  langsmith_experiment.py  ragas_metrics.py  results_approval_card.json  results_baseline_fixed.json  results_baseline_original.json  results_council_critique.json  results_council_critique_90.json  results_council_critique_full.json  results_critique_interrupt_fix.json  results_first_message_fix.json  results_hybrid_retrieval.json  results_photo_meal.json  results_scope_gate_hardening.json  results_scope_gate_recheck.json  results_topic_interrupt_87.json  results_topic_interrupt_fix.json  results_topic_interrupt_smoke.json  results_try_profile_ux.json  results_try_profile_ux_full.json  results_try_profile_ux_retry_critical.json  run_evals.py  summary_approval_card.json  summary_approval_card.md  summary_baseline.json  summary_baseline_fixed.json  summary_baseline_fixed.md  summary_baseline_original.md  summary_council_critique.json  summary_council_critique.md  summary_council_critique_90.json  summary_council_critique_90.md  summary_council_critique_full.json  summary_council_critique_full.md  (+24 more)
scripts/: backfill_memories.py  init_db.py  migrate_add_fts.py  migrate_documents_kb.py  migrate_documents_memory.py  migrate_ephemeral_profiles.py  seed_knowledge_base.py  seed_memory.py
tests/: test_approval_copy.py  test_evals.py  test_gate_context.py  test_graph.py  test_hitl.py  test_hybrid_rrf.py  test_intake.py  test_kb.py  test_memory.py  test_memory_recency.py  test_photo_meal.py  test_profile_isolation.py  test_security.py  test_thread_runtime.py  test_tool_agent.py  test_try_profile_ux.py  test_try_profiles.py
web/: package-lock.json  package.json
(+68 files in other folders)
