[project]
name = "steadyfit"
version = "0.1.0"
description = "SteadyFit — multi-agent LangGraph fitness coaching copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core agent stack
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "openai",
    "pydantic",
    "pydantic-settings",
    # Storage (Postgres + pgvector on Neon)
    "psycopg[binary]",
    "psycopg-pool",
    "pgvector",
    # Tools
    "tavily-python",
    "requests",
    # API
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
    "slowapi",
    # Evals
    "ragas",
    "datasets",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
