[project]
name = "steadyfit"
version = "0.1.0"
description = "SteadyFit — multi-agent LangGraph fitness coaching copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core agent stack
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres",
    "langchain-core",
    "langchain-openai",
    "langchain-text-splitters",
    "openai",
    "pydantic",
    "pydantic-settings",
    # Storage (Postgres + pgvector on Neon)
    "psycopg[binary]",
    "psycopg-pool",
    "pgvector",
    # Tools
    "tavily-python",
    "requests",
    "pypdf",
    "pyyaml",
    # API
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
    "slowapi",
    # Evals (RAGAS + HF datasets; pin for harness stability)
    "ragas>=0.4,<0.5",
    "datasets>=4,<5",
    "langchain-community<0.4",
    "python-dotenv",
    "nest-asyncio>=1.6",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
